Fix align

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   width: 100%;
 }
 .centered {
-  align-self: center;
+  text-align: center;
 }
 .headercontainer {
   background-color: #222;
